--- a/src/rs/edu/megatrend/dnevnik/dUcenici.form
+++ b/src/rs/edu/megatrend/dnevnik/dUcenici.form
@@ -87,6 +87,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Dodaj ucenika"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDodajActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnIzbrisi">
       <Properties>
