--- a/src/rs/edu/megatrend/dnevnik/dUcenici.form
+++ b/src/rs/edu/megatrend/dnevnik/dUcenici.form
@@ -30,8 +30,10 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnDodaj" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnIzbrisi" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnIzmeni" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="btnIzmeni" alignment="1" max="32767" attributes="0"/>
+                      <Component id="btnIzbrisi" alignment="1" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -103,6 +105,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Izmeni"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIzmeniActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
