crud roditelji temp

--- a/src/rs/edu/megatrend/dnevnik/dUceniciDodavanje.form
+++ b/src/rs/edu/megatrend/dnevnik/dUceniciDodavanje.form
@@ -24,40 +24,44 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-              </Group>
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="tfNapomena" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfPassword" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfUsername" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfEmail" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfTelefon" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfAdresa" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfMestoRodjenja" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfPol" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfIme" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfPrezime" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="tfDatumRodjenja" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="tfNapomena" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfPassword" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfUsername" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfEmail" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfTelefon" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfAdresa" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfMestoRodjenja" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfPol" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfIme" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfPrezime" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="tfDatumRodjenja" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="29" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="btnDodajUcenika" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="btnDodajUcenika" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
