--- a/src/rs/edu/megatrend/dnevnik/dUceniciIzmena.form
+++ b/src/rs/edu/megatrend/dnevnik/dUceniciIzmena.form
@@ -57,6 +57,8 @@
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
+              <Component id="btnIzmeniStaratelje" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnDodajUcenika" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -121,7 +123,10 @@
                   <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnDodajUcenika" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnDodajUcenika" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnIzmeniStaratelje" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -245,6 +250,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDodajUcenikaActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnIzmeniStaratelje">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Izmeni staratelje"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
